--- a/style/header/_header.scss
+++ b/style/header/_header.scss
@@ -102,7 +102,7 @@
 			vertical-align: bottom;
 
 			img {
-				height: 58px;
+				height: $size__logo-height-desktop;
 				margin-top: 10px;
 				margin-bottom: 10px;
 			}
